--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <img src="/farazzz-removebg-preview.png" alt="profile picture">
     <h1>AHMED FARAZ</h1>
-    <p>web designer</p>
+    <p>Frontend Web Developer</p>
     <h2>profile</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Odio delectus odit exercitationem<br> soluta quos quidem, laborum quas libero<br> consequuntur at provident esse nam a.<br> Cumque magni ab iure in placeat.</p>
     
